# rust_web_api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
src/: app_state.rs  lib.rs  main.rs
src/models/: user.rs
src/utilities/: app_error.rs  hash.rs  jwt.rs
tests/: integration_test.rs
tests/common/: mod.rs
