[package]
name = "rust_web_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
bcrypt = "0.15.0"
chrono = { version = "0.4.33", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.2.0"
reqwest = { version = "0.11.23", default-features = false, features = [
  "json",
  "rustls-tls-webpki-roots",
] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
serde_with = "3.5.1"
sqlx = { version = "0.7.3", features = [
  "runtime-tokio-rustls",
  "postgres",
  "time",
  "chrono",
] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
